fix(layout): prevent background from resizing with overflow
Move the background elements into a div separate from
the page contents. That way if the page contents overflow
then the background does not also resize to fit the
page contents.

--- a/spot-client/src/common/css/temp.scss
+++ b/spot-client/src/common/css/temp.scss
@@ -155,6 +155,29 @@ body.using-mouse :focus {
   width: 100%;
 }
 
+.view-background-container {
+    background-size: cover;
+    height: 100vh;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    width: 100vw;
+}
+
+.view-content-container {
+    height: 100vh;
+    overflow: auto;
+    position: relative;
+    width: 100vw;
+
+    .view-content-center {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100%;
+    }
+}
+
 .view-gradient {
   align-items: center;
   background-size: cover;
